Deployment/spring-boot-api/overlays/demo/image.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-boot-api
spec:
  template:
    spec:
      containers:
        - name: spring-boot-api
          image: docker.io/crackitty/spring-boot-demo-api:1
